dep-fast-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-deployment
  namespace: fastapi-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-app
          image: fast_api_py_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
