svc-fast-api.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-fast-api
  namespace: fastapi-app-namespace
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
