svc-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-sqdb
  namespace: fastapi-app-namespace
spec:
  selector:
    app: sqdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
