ing-fast-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-fastapi
  namespace: fastapi-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-fast-api
                port:
                  number: 8000
